--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -22,3 +22,5 @@ models ={ path = "../libs/models" }
 routes = { path = "../libs/routes" }
 schemas = { path = "../libs/schemas" }
 utils = { path = "../libs/utils" }
+anyhow = "1.0.99"
+chrono = { workspace = true }
